--- a/public/chat.html
+++ b/public/chat.html
@@ -11,75 +11,58 @@
     --background-light: #f4f7f9;
     --background-white: #ffffff;
   }
-  html {
-    box-sizing: border-box;
-  }
-  *, *:before, *:after {
-    box-sizing: inherit;
+  html, body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
   }
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    margin: 0;
     background-color: var(--background-light);
     color: #1d1d1f;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    overflow: hidden;
   }
 
   /* =============================================== */
-  /* === LAYOUT PRINCIPAL (CORRIGIDO) === */
+  /* === LAYOUT PRINCIPAL (CORRIGIDO E ROBUSTO) === */
   /* =============================================== */
   .top-bar {
+    flex-shrink: 0; /* Cabeçalho não encolhe */
     display: flex;
     align-items: center;
     padding: 0 16px;
     background-color: var(--background-white);
     border-bottom: 1px solid var(--gray-border);
     box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-    flex-shrink: 0; /* Não encolhe */
   }
   .chat-container {
+    flex-grow: 1; /* Área principal cresce para ocupar o espaço */
     display: flex;
-    flex-grow: 1; /* Ocupa todo o espaço restante */
-    overflow: hidden;
+    overflow: hidden; /* Conteúdo interno que rola, não o container */
     position: relative;
   }
+  #chatInputWrapper {
+    flex-shrink: 0; /* Rodapé (input) não encolhe */
+    padding: 10px;
+    border-top: 1px solid var(--gray-border);
+    background-color: var(--background-white);
+    position: relative;
+  }
+
+  /* Área de Mensagens e Usuários */
   .messages-area {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    min-width: 0; /* Previne que o flex item cresça demais */
-    background-color: var(--background-white);
+    min-width: 0;
+    background-color: #f8f9fa;
   }
   .messages {
-    flex-grow: 1; /* Faz a área de mensagens ocupar o espaço, empurrando o input para baixo */
+    flex-grow: 1;
     padding: 15px;
-    overflow-y: auto; /* Apenas esta área rola */
+    overflow-y: auto; /* Apenas esta área deve rolar */
   }
-  #chatInputWrapper {
-    padding: 10px;
-    border-top: 1px solid var(--gray-border);
-    background-color: var(--background-white);
-    flex-shrink: 0; /* Não encolhe */
-    position: relative;
-  }
-
-  /* CABEÇALHO SUPERIOR */
-  #backBtn {
-    background: none; border: none; font-size: 1.8em; color: var(--primary-color);
-    cursor: pointer; padding: 10px 10px 10px 0;
-  }
-  #roomTitle {
-    flex-grow: 1; text-align: center; margin: 0; font-size: 1.1em; font-weight: 600;
-  }
-  #usersBtn {
-    background: none; border: none; font-size: 1.8em; color: var(--primary-color);
-    cursor: pointer; padding: 10px 0 10px 10px; display: none; /* Escondido por padrão */
-  }
-  
-  /* PAINEL LATERAL DE USUÁRIOS */
   .users {
     flex-basis: 300px;
     flex-shrink: 0;
@@ -89,17 +72,30 @@
     overflow-y: auto;
     transition: transform 0.3s ease-in-out;
   }
+  
+  /* =============================================== */
+  /* === OUTROS ESTILOS (BOTÕES, TEXTOS, ETC) === */
+  /* =============================================== */
+  #backBtn {
+    background: none; border: none; font-size: 1.8em; color: var(--primary-color);
+    cursor: pointer; padding: 10px 10px 10px 0;
+  }
+  #roomTitle {
+    flex-grow: 1; text-align: center; margin: 0; font-size: 1.1em; font-weight: 600;
+  }
+  #usersBtn {
+    background: none; border: none; font-size: 1.8em; color: var(--primary-color);
+    cursor: pointer; padding: 10px 0 10px 10px; display: none;
+  }
+  
   #statusContainer { display: flex; align-items: center; gap: 8px; font-size: 14px; padding-bottom: 10px; margin-bottom: 10px; }
   .user-list-divider { border: 0; border-top: 1px solid #e9ecef; margin: 10px 0; }
-  .status-dot {
-    width: 10px; height: 10px; border-radius: 50%; display: inline-block; margin-right: 8px;
-  }
+  .status-dot { width: 10px; height: 10px; border-radius: 50%; display: inline-block; margin-right: 8px; }
   .status-online-dot { background-color: #28a745; }
   .status-voltoja-dot { background-color: #ffc107; }
   .status-ocupado-dot { background-color: #dc3545; }
   .user-item { cursor: pointer; padding: 4px 0; }
   
-  /* CONTROLES DE INPUT */
   .input-controls { display: flex; gap: 8px; align-items: center; }
   #msgInput {
     flex: 1; padding: 12px 18px; border-radius: 22px; border: 1px solid #ccc;
@@ -116,8 +112,7 @@
     background-color: var(--primary-color); color: white; border: none; border-radius: 22px;
     padding: 0 20px; cursor: pointer; font-size: 16px; font-weight: 600;
   }
-
-  /* PREVIEW DE IMAGEM E EMOJIS */
+  
   #imagePreviewContainer {
       display: none; padding-bottom: 10px; position: relative; max-width: 150px;
   }
@@ -128,6 +123,7 @@
       cursor: pointer; font-weight: bold; line-height: 22px; text-align: center;
   }
   .chat-image { max-width: 250px; border-radius: 8px; margin-top: 5px; cursor: pointer; }
+  
   #emojiPicker {
     position: absolute; bottom: 100%; left: 10px; margin-bottom: 5px; background: white;
     border: 1px solid #ccc; border-radius: 10px; padding: 5px; display: none;
@@ -167,23 +163,7 @@
     <div class="overlay" id="overlay"></div>
     <div class="messages-area">
         <div class="messages" id="messages"></div>
-        <div id="chatInputWrapper">
-            <div id="imagePreviewContainer">
-                <img id="imagePreview" />
-                <button id="removeImageBtn">&times;</button>
-            </div>
-            <div class="input-controls">
-                <button id="emojiBtn" class="control-btn">😊</button>
-                <button id="imageBtn" class="control-btn">🖼️</button>
-                <input type="file" id="imageInput" accept="image/*" style="display: none;">
-                <input id="msgInput" placeholder="Digite sua mensagem..." autocomplete="off" />
-                <div id="mentionSuggestions"></div>
-                <button id="sendBtn">Enviar</button>
-            </div>
-            <div id="emojiPicker"></div>
-        </div>
     </div>
-
     <div class="users" id="users">
         <div id="statusContainer">
             <label for="statusSelect" id="statusLabel">Seu Status:</label>
@@ -194,6 +174,22 @@
             </select>
         </div>
     </div>
+</div>
+
+<div id="chatInputWrapper">
+    <div id="imagePreviewContainer">
+        <img id="imagePreview" />
+        <button id="removeImageBtn">&times;</button>
+    </div>
+    <div class="input-controls">
+        <button id="emojiBtn" class="control-btn">😊</button>
+        <button id="imageBtn" class="control-btn">🖼️</button>
+        <input type="file" id="imageInput" accept="image/*" style="display: none;">
+        <input id="msgInput" placeholder="Digite sua mensagem..." autocomplete="off" />
+        <div id="mentionSuggestions"></div>
+        <button id="sendBtn">Enviar</button>
+    </div>
+    <div id="emojiPicker"></div>
 </div>
 
 <audio id="mentionSound" src="/sounds/alert.wav" preload="auto"></audio>
