--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,7 @@
         header h1{margin:0;font-size:2.5em}
         header p{margin-top:5px;font-size:1.2em;opacity:.9}
         .hero{display:flex;align-items:center;justify-content:center;padding:50px 20px;gap:40px}
-        
-        .hero-content{
-            flex-basis:50%;
-            max-width:500px;
-            display: flex;
-            flex-direction: column;
-            gap: 25px;
-        }
-
+        .hero-content{flex-basis:50%;max-width:500px;display: flex;flex-direction: column;gap: 25px;}
         .hero-image-container{flex-basis:40%;max-width:400px;text-align:center;position:relative;display:flex;align-items:center;justify-content:center}
         .hero-image{max-width:100%;height:auto;border-radius:50%;box-shadow:0 8px 25px rgba(0,86,179,.2);object-fit:cover}
         .speech-bubble{position:absolute;background-color:#28a745;color:white;padding:8px 15px;border-radius:20px;font-size:.9em;font-weight:700;box-shadow:0 4px 6px rgba(0,0,0,.1);opacity:0;animation-fill-mode:forwards;animation-duration:1.5s;animation-timing-function:ease-out}.bubble-en{top:15%;left:10%;animation-name:floatBubble;animation-delay:.2s}.bubble-es{top:30%;right:0;background-color:#ffc107;color:#333;animation-name:floatBubble;animation-delay:.5s}.bubble-fr{bottom:25%;left:5%;background-color:#dc3545;animation-name:floatBubble;animation-delay:.8s}.bubble-pt{bottom:10%;right:10%;background-color:#17a2b8;animation-name:floatBubble;animation-delay:1.1s}@keyframes floatBubble{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
@@ -92,20 +84,14 @@
         .widget-body { overflow-y: auto; padding: 5px; }
         .connections-list { list-style: none; padding: 0; margin: 0; }
         .connection-item {
-    display: flex;
-    align-items: center;
-    padding: 8px 10px;
-    border-radius: 5px;
-    position: relative; /* Essencial para o posicionamento da bolinha */
-    padding-left: 30px; /* Aumenta o espaço à esquerda para a bolinha */
-}
-.connection-item-link {
-    text-decoration: none;
-    color: inherit;
-    display: flex; 
-    align-items: center;
-    flex-grow: 1;
-}
+            display: flex;
+            align-items: center;
+            padding: 8px 10px;
+            border-radius: 5px;
+            position: relative;
+            padding-left: 30px;
+        }
+        .connection-item-link { text-decoration: none; color: inherit; display: flex; align-items: center; flex-grow: 1; }
         .connection-item:hover { background-color: #f1f1f1; }
         .connection-item img { width: 35px; height: 35px; border-radius: 50%; margin-right: 10px; object-fit: cover; }
         .connection-item .action-buttons { margin-left: auto; display: flex; align-items: center;}
@@ -174,25 +160,20 @@
         .btn-reject { background-color: #6c757d; }
         .connections-widget, .hero, header, main, footer { z-index: 1; }
 
-.status-dot {
-    position: absolute; /* Posição exata, independente dos outros elementos */
-    left: 10px;         /* Distância da borda esquerda */
-    top: 50%;           /* Alinhamento vertical ao centro */
-    transform: translateY(-50%); /* Ajuste fino do alinhamento vertical */
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    border: 2px solid #fff; /* Borda para destacar do fundo */
-    z-index: 2; /* Garante que a bolinha fique por cima de tudo */
-}
-        .status-dot.online {
-    background-color: #28a745; /* Verde */
-}
-        .status-dot.offline {
-    background-color: #6c757d; /* Cinza */
-}
+        .status-dot {
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            height: 10px;
+            width: 10px;
+            border-radius: 50%;
+            border: 2px solid #fff;
+            z-index: 2;
+        }
+        .status-dot.online { background-color: #28a745; }
+        .status-dot.offline { background-color: #6c757d; }
 
-        /* NOVO CSS PARA O POPUP DE CHAMADA */
         .call-modal-overlay {
             position: fixed;
             top: 0;
