--- a/public/index.html
+++ b/public/index.html
@@ -56,41 +56,13 @@
         .user-search-container { position: relative; }
         @media (max-width:960px){ main { flex-direction: column; } }
         @media (max-width:768px){ .hero{flex-direction:column;text-align:center}header h1{font-size:2em}.hero-image-container{margin-top:30px;min-height:250px} }
-
-        .connections-widget {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            width: 280px;
-            max-height: 400px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.15);
-            z-index: 1000;
-            display: none;
-            flex-direction: column;
-        }
-        .widget-header {
-            padding: 10px 15px;
-            background-color: #343a40;
-            color: white;
-            border-radius: 8px 8px 0 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+        .connections-widget { position: fixed; bottom: 20px; left: 20px; width: 280px; max-height: 400px; background: #fff; border-radius: 8px; box-shadow: 0 5px 20px rgba(0,0,0,0.15); z-index: 1000; display: none; flex-direction: column; }
+        .widget-header { padding: 10px 15px; background-color: #343a40; color: white; border-radius: 8px 8px 0 0; display: flex; justify-content: space-between; align-items: center; }
         .widget-header h3 { margin: 0; font-size: 1.1em; }
         .toggle-widget { cursor: pointer; font-size: 1.5em; line-height: 1; }
         .widget-body { overflow-y: auto; padding: 5px; }
         .connections-list { list-style: none; padding: 0; margin: 0; }
-        .connection-item {
-            display: flex;
-            align-items: center;
-            padding: 8px 10px;
-            border-radius: 5px;
-            position: relative;
-            padding-left: 30px;
-        }
+        .connection-item { display: flex; align-items: center; padding: 8px 10px; border-radius: 5px; position: relative; padding-left: 30px; }
         .connection-item-link { text-decoration: none; color: inherit; display: flex; align-items: center; flex-grow: 1; }
         .connection-item:hover { background-color: #f1f1f1; }
         .connection-item img { width: 35px; height: 35px; border-radius: 50%; margin-right: 10px; object-fit: cover; }
@@ -101,55 +73,13 @@
         .btn-video.active { color: #dc3545; }
         .btn-chat { background: none; border: none; font-size: 1.2em; cursor: pointer; color: #007bff; padding: 5px; }
         .btn-chat:hover { opacity: 0.7; }
-        
-        .notification-container {
-            position: relative;
-        }
-        #notification-bell {
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-        }
+        .notification-container { position: relative; }
+        #notification-bell { cursor: pointer; display: flex; align-items: center; }
         #notification-bell .icon { font-size: 1.5em; line-height: 1; }
-        .notification-badge {
-            position: absolute;
-            top: -5px;
-            right: -8px;
-            background-color: #dc3545;
-            color: white;
-            border-radius: 50%;
-            font-size: 0.75em;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-width: 18px;
-            height: 18px;
-            padding: 2px;
-            box-sizing: border-box;
-            display: none;
-        }
-        .notifications-dropdown {
-            display: none;
-            position: absolute;
-            top: 40px;
-            right: 0;
-            width: 350px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 5px 25px rgba(0,0,0,0.2);
-            z-index: 2000;
-            color: #333;
-        }
-        .notifications-dropdown.active {
-            display: block;
-        }
-        .notifications-dropdown h2 {
-            padding: 15px;
-            margin: 0;
-            font-size: 1.1em;
-            border-bottom: 1px solid #eee;
-        }
+        .notification-badge { position: absolute; top: -5px; right: -8px; background-color: #dc3545; color: white; border-radius: 50%; font-size: 0.75em; font-weight: bold; display: none; align-items: center; justify-content: center; min-width: 18px; height: 18px; padding: 2px; box-sizing: border-box; }
+        .notifications-dropdown { display: none; position: absolute; top: 40px; right: 0; width: 350px; background: #fff; border-radius: 8px; box-shadow: 0 5px 25px rgba(0,0,0,0.2); z-index: 2000; color: #333; }
+        .notifications-dropdown.active { display: block; }
+        .notifications-dropdown h2 { padding: 15px; margin: 0; font-size: 1.1em; border-bottom: 1px solid #eee; }
         .requests-list { list-style: none; padding: 0; margin: 0; max-height: 300px; overflow-y: auto; }
         .request-item { display: flex; align-items: center; padding: 10px 15px; border-bottom: 1px solid #eee; }
         .request-item:last-child { border-bottom: none; }
@@ -159,64 +89,16 @@
         .btn-accept { background-color: #28a745; }
         .btn-reject { background-color: #6c757d; }
         .connections-widget, .hero, header, main, footer { z-index: 1; }
-
-        .status-dot {
-            position: absolute;
-            left: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            height: 10px;
-            width: 10px;
-            border-radius: 50%;
-            border: 2px solid #fff;
-            z-index: 2;
-        }
+        .status-dot { position: absolute; left: 10px; top: 50%; transform: translateY(-50%); height: 10px; width: 10px; border-radius: 50%; border: 2px solid #fff; z-index: 2; }
         .status-dot.online { background-color: #28a745; }
         .status-dot.offline { background-color: #6c757d; }
-
-        .call-modal-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-        }
-        .call-modal-content {
-            background-color: #333;
-            color: white;
-            padding: 40px;
-            border-radius: 15px;
-            text-align: center;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-            animation: fadeIn 0.3s ease-out;
-            width: 320px;
-        }
+        .call-modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); display: none; justify-content: center; align-items: center; z-index: 9999; }
+        .call-modal-content { background-color: #333; color: white; padding: 40px; border-radius: 15px; text-align: center; box-shadow: 0 10px 30px rgba(0,0,0,0.5); animation: fadeIn 0.3s ease-out; width: 320px; }
         @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
-        .call-modal-content img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            border: 3px solid white;
-            margin-bottom: 15px;
-            object-fit: cover;
-        }
+        .call-modal-content img { width: 100px; height: 100px; border-radius: 50%; border: 3px solid white; margin-bottom: 15px; object-fit: cover; }
         .call-modal-content h3 { margin: 0; font-size: 1.5em; }
         .call-modal-content p { margin: 5px 0 25px 0; font-size: 1.1em; opacity: 0.8; }
-        .call-modal-actions button {
-            padding: 12px 25px;
-            border: none;
-            border-radius: 25px;
-            font-size: 1em;
-            font-weight: bold;
-            cursor: pointer;
-            margin: 0 10px;
-            transition: transform 0.2s;
-        }
+        .call-modal-actions button { padding: 12px 25px; border: none; border-radius: 25px; font-size: 1em; font-weight: bold; cursor: pointer; margin: 0 10px; transition: transform 0.2s; }
         .call-modal-actions button:hover { transform: scale(1.05); }
         #accept-call-btn { background-color: #28a745; color: white; }
         #decline-call-btn { background-color: #dc3545; color: white; }
@@ -233,7 +115,7 @@
             <span id="welcome-message"></span>
 			<span id="admin-link-container"></span>
             <div class="notification-container">
-                <div id="notification-bell" title="Notificações" style="display: none;">
+                <div id="notification-bell" title="Notificações">
                     <span class="icon">🔔</span>
                     <span id="notification-count" class="notification-badge"></span>
                 </div>
@@ -345,7 +227,7 @@
         </div>
     </div>
 
-    <div id="incoming-call-modal" class="call-modal-overlay" style="display: none;">
+    <div id="incoming-call-modal" class="call-modal-overlay">
         <div class="call-modal-content">
             <img id="caller-avatar" src="/default-avatar.png" alt="Avatar">
             <h3 id="caller-name"></h3>
