trigger: Força re-deploy no Railway

--- a/public/index.html
+++ b/public/index.html
@@ -257,11 +257,8 @@
             const colorPickerBtn = document.getElementById('colorPickerBtn');
             const selectedColorPreview = document.getElementById('selectedColorPreview');
             
-            // A conexão principal do Socket.IO é gerenciada pelo global.js
-            // Para eventos específicos desta página, podemos criar uma nova conexão
-            // ou usar a existente se a fizermos global. Por simplicidade,
-            // vamos nos conectar novamente para ouvir os contadores de sala.
-            const pageSocket = io();
+            // A conexão principal do Socket.IO já é gerenciada pelo global.js
+            // e a variável 'socket' de lá agora vai lidar com os eventos desta página.
 
             function populateRoomList() {
                 if (!dynamicRoomListContainer) return;
@@ -296,18 +293,6 @@
                 window.location.href = `chat.html?sala=${selectedRoom}&nick=${nick}&idade=${age}&color=${encodeURIComponent(color)}`;
             });
 
-            pageSocket.on('roomCounts', (counts) => {
-                for (const room in counts) {
-                    const countElement = document.getElementById(`count-${room}`);
-                    if (countElement) countElement.textContent = counts[room];
-                }
-            });
-
-            pageSocket.on('stopPlayerCountUpdate', (count) => {
-                const countElement = document.getElementById('stop-player-count');
-                if (countElement) countElement.textContent = count;
-            });
-            
             let searchTimeout;
             userSearchInput.addEventListener('input', () => {
                 clearTimeout(searchTimeout);
