--- a/public/stop-lobby.html
+++ b/public/stop-lobby.html
@@ -49,6 +49,20 @@
         .category-tag { background-color: #6c757d; color: white; padding: 5px 10px; border-radius: 15px; display: flex; align-items: center; gap: 8px; font-size: 0.9em; }
         .remove-tag-btn { background: none; border: none; color: white; font-weight: bold; cursor: pointer; padding: 0; line-height: 1; font-size: 1.2em; opacity: 0.7; }
         .remove-tag-btn:hover { opacity: 1; }
+		
+		  /* --- CÓDIGO CSS ADICIONADO --- */
+        .call-modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); display: none; justify-content: center; align-items: center; z-index: 9999; }
+        .call-modal-content { background-color: #333; color: white; padding: 40px; border-radius: 15px; text-align: center; box-shadow: 0 10px 30px rgba(0,0,0,0.5); animation: fadeIn 0.3s ease-out; width: 320px; }
+        @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
+        .call-modal-content img { width: 100px; height: 100px; border-radius: 50%; border: 3px solid white; margin-bottom: 15px; object-fit: cover; }
+        .call-modal-content h3 { margin: 0; font-size: 1.5em; }
+        .call-modal-content p { margin: 5px 0 25px 0; font-size: 1.1em; opacity: 0.8; }
+        .call-modal-actions button { padding: 12px 25px; border: none; border-radius: 25px; font-size: 1em; font-weight: bold; cursor: pointer; margin: 0 10px; transition: transform 0.2s; }
+        .call-modal-actions button:hover { transform: scale(1.05); }
+        #accept-call-btn { background-color: #28a745; color: white; }
+        #decline-call-btn { background-color: #dc3545; color: white; }
+        /* --- FIM DO CÓDIGO ADICIONADO --- */
+		
     </style>
 </head>
 <body>
