trigger: Força re-deploy no Railway

--- a/public/stop-lobby.html
+++ b/public/stop-lobby.html
@@ -123,6 +123,6 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="stop-lobby.js"></script>
+     <script src="/js/global.js"></script>
 </body>
 </html>
