trigger: Força re-deploy no Railway

--- a/public/stop-lobby.html
+++ b/public/stop-lobby.html
@@ -122,7 +122,8 @@
         </div>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
-     <script src="/js/global.js"></script>
+     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/global.js"></script>
+    <script src="stop-lobby.js"></script> </body>
 </body>
 </html>
